// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render ExpensesSummary with 1 expense. 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`Should correctly render ExpensesSummary with multiple expenses. 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $232,132,132,132.21
  </h3>
</div>
`;
